--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title></title>
+	<title>The L is Silent &mdash; A Design Portfolio</title>
 </head>
 
 <body>
 	<header>
-		<div id="logo">
-			<a href="index.html"></a>
-			<h1 class="hidden">The L is Silent &mdash; Design by Brian Hulme</h1>
+      		<div id="logo">
+        		<a href="index.html"></a>
+		        <h1 class="hidden">The L is Silent &mdash; Design by Brian Hulme</h1>
 		</div>
-		
 	</header>
+	
 	<section id="content">
 		
 		<div id="left">
