--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <a href="pages/about.html"><li>about</li></a>
-        <a href="assets/global/resume_2017.pdf" target="_blank"><li>resume</li></a>
+        <a href="assets/global/sd_2017.pdf" target="_blank"><li>resume</li></a>
       </ul>
     </nav>
     
