--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     
     <div class="imageGrid">
       <ul class="images">
+        <li><a href="pages/chipotle.html"><img src="assets/chipotle/chipotle_01.jpg"></a></li>
         <li><a href="pages/yeanay.html"><img src="assets/yeanay/yeanay_01.gif"></a></li>
-        <li><a href="pages/topsecret.html"><img src="assets/topsecret/topsecret_02.jpg"></a></li>
         <li><a href="pages/designathing.html"><img src="assets/designathing/oldschool-phone.gif"></a></li>
         <li><a href="pages/soto.html"><img src="assets/soto/soto_02.gif"></a></li>
         <li><a href="pages/logo.html"><img src="assets/logos/rhlj.png"></a></li>
-        <li><a href="pages/top_secret_1.html"><img src="assets/hg/hg_06.jpg"></a></li>
+        <li><a href="pages/healthgrades.html"><img src="assets/hg/hg_06.jpg"></a></li>
         <li><a href="pages/remind101.html"><img src="assets/remind101/101_01.jpg"></a></li>
         <li><a href="pages/sunski.html"><img src="assets/sunski/sunski_01.jpg"></a></li>
         <li><a href="pages/tmwe.html"><img src="assets/tmwe/tmwe_01.jpg"></a></li>
