--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -23,7 +23,7 @@
     <p>I like to use Sketch symbols during this process because it helps me make a lot of explorational changes quickly, but I don't spent a ton of time making sure things are aligned perfectly or named correctly&mdash;I won't use 80% of what I create in this phase anyways. Once I'm happy with what I have, I move on to the next concept. I'll come back to this design later and refine further, but I don't want to get too attached to any one design at this stage.</p>
 			
     <h2><span class="num-count">03 /</span> Wash, Rinse, Repeat</h2>
-    <p>After I've explored one design direction, I go back to my sketches and choose another option I'd like to explore. From there I repeat the same process. Depending on the project this could take a few hours or a few weeks. I try to stretch the creativy bounds of the project, thinking of as many different ways to solve the problem as I can.</p>
+    <p>After I've explored one design direction, I go back to my sketches and choose another option I'd like to explore. From there I repeat the same process. Depending on the project this could take a few hours or a few weeks. I try to stretch the creative bounds of the project, thinking of as many different ways to solve the problem as I can.</p>
     <img src="assets/autom8-02-sketch.jpg" style="margin-bottom: 10px;"/>
 		<img src="assets/autom8-02-sketch-2.jpg" style="margin-bottom: 10px;"/>
 		<video src="assets/video-workflow-3.mp4" autoplay muted controls loop>
@@ -38,7 +38,7 @@
     </video>
 	
     <h1><span class="num-count" style="vertical-align: 15%;">05 /</span> The First Solution</h1>
-		<p>Sometimes I'll offer more than one design solution during the early parts of a project, especially if the particular client doesn't have strong brand guidelines or was particularly vague about the design requirements. I don't make design decisions based on &ldquo;it looking good&rdquo; or because &ldquo;I like the color&rdquo;&mdash;I base my decisions on the brand. Since I didn't have any of that information today, I kind of had to make some assumptions about the brand.</p>
+		<p>Sometimes I'll offer more than one design solution during the early parts of a project, especially if the particular client doesn't have strong brand guidelines or was vague about the design requirements. Since I didn't have any brand guidelines for this exercise, I took some liberties about the brand.</p>
 		<p>My first solution stays fairly true to the wireframes provided. It fixes some of the smaller UX painpoints but is still a vertical list of options that you can edit. </p>
 		<img src="assets/autom8-01a.jpg" style="margin-bottom: 10px;"/>
 		<img src="assets/autom8-01b.jpg" style="margin-bottom: 10px;"/>
