--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -38,8 +38,7 @@
     </video>
 	
     <h1><span class="num-count" style="vertical-align: 15%;">05 /</span> The First Solution</h1>
-		<p>Sometimes I'll offer more than one design solution during the early parts of a project, especially if the particular client doesn't have strong brand guidelines or was vague about the design requirements. Since I didn't have any brand guidelines for this exercise, I took some liberties about the brand.</p>
-		<p>My first solution stays fairly true to the wireframes provided. It fixes some of the smaller UX painpoints but is still a vertical list of options that you can edit. </p>
+		<p>Sometimes I'll offer more than one design solution during the early parts of a project, especially if the particular client doesn't have strong brand guidelines or was vague about the design requirements. Since I didn't have any brand guidelines for this exercise, I took some liberties. My first solution stays fairly true to the wireframes provided. It fixes some of the smaller UX painpoints but is still a vertical list of options that you can edit.</p>
 		<img src="assets/autom8-01a.jpg" style="margin-bottom: 10px;"/>
 		<img src="assets/autom8-01b.jpg" style="margin-bottom: 10px;"/>
 		<img src="assets/autom8-01d.jpg" style="margin-bottom: 40px;"/>
@@ -56,6 +55,8 @@
 		<video class="vid-small" src="assets/autom8-02c.mp4" autoplay muted controls loop>
       <source src="assets/autom8-02c.mp4" type="video/mp4">
     </video>
+		<p>This solution still has a simple overall feel, but has more personality to it. On a real-world project, the exact illustration style would be fine-tuned to correctly match the brand, but for the purpose of this exercise, I felt a simple color palette was strongest. I wanted the illustration to be the main focus of the page, so typography is still downplayed. The only splash of color outside the illustration is for actionable items, to make sure they don't get lost.</p>
+		
 		<p>Thank you for your time and for the consideration. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>.</p>
 		<p class="unbold">Oh, and if you'd like the Sketch files I can send them, but please keep in mind I had speed in mind when designing this exercise. My use of symbols, text styles and layer styles are lacking, because the focus of my time was on quick exploration.)</p>
 			
