--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -57,12 +57,10 @@
     </video>
 		<p>This solution still has a simple overall feel, but has more personality to it. On a real-world project, the exact illustration style would be fine-tuned to correctly match the brand, but for the purpose of this exercise, I felt a simple color palette was strongest. I wanted the illustration to be the main focus of the page, so typography is still downplayed. The only splash of color outside the illustration is for actionable items, to make sure they don't get lost.</p>
 	  
-	  
 		<p>&mdash;</p>
 		
-		<p>Thank you for your time and for the consideration. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>.</p>
-		<p class="unbold">Oh, and if you'd like the Sketch files I can send them, but please keep in mind I had speed in mind when designing this exercise. My use of symbols, text styles and layer styles are lacking, because the focus of my time was on quick exploration.)</p>
-			
-		<h3 style="margin: -20px 0 120px 0">Brian Hulme</h3>
+		<p>Thank you for your time and for the consideration. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>. <span class="unbold">Oh, and if you'd like the Sketch files I can send them, but please keep in mind I had speed in mind when designing this exercise. My use of symbols, text styles and layer styles are lacking, because the focus of my time was on quick exploration.)</span></p>	
+		
+	  <h3 style="margin: -20px 0 120px 0">Brian Hulme</h3>
   </body>
 </html>
