--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -15,7 +15,7 @@
 		<img src="assets/sketches-01.jpg"/>
 			
     <h2><span class="num-count">02 /</span> To the Machine</h2>
-		<p>After I've sketched both good and bad ideas, I review my work and choose the strongest options to continue to build out. I move to the computer and begin layout design. I think through spacing between components, colors, typography and navigation. I use placeholders for icons and images until I'm happy with the basic layout I have. I normally have a good mental picture of color schemes and visual feel before I move to the computer, but I do a lot of exploration and refinement as I build it out.</p>
+		<p>After sketching a number of ideas (both good and bad), I review my work and choose the strongest options to continue to build out. That's when I transition to the computer and begin layout design. This is where I start solving spacing, colors, typography and navigation. I use placeholders for icons and images until I'm happy with the basic layout I have, and I normally have a good mental picture of color schemes and visual feel before I move to the computer. This is where a log of exploration and refinement as I build it out.</p>
     <img src="assets/autom8-01-sketch.jpg" style="margin-bottom: 10px;"/>
 		<video src="assets/video-workflow-1.mp4" autoplay muted controls loop>
       <source src="assets/video-workflow-1.mp4" type="video/mp4">
@@ -56,11 +56,11 @@
       <source src="assets/autom8-02c.mp4" type="video/mp4">
     </video>
 		<p>This solution still has a simple overall feel, but has more personality to it. On a real-world project, the exact illustration style would be fine-tuned to correctly match the brand, but for the purpose of this exercise, I felt a simple color palette was strongest. I wanted the illustration to be the main focus of the page, so typography is still downplayed. The only splash of color outside the illustration is for actionable items, to make sure they don't get lost.</p>
-	  
+		
 		<p>&mdash;</p>
 		
-		<p>Thank you for your time and for the consideration. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>. <span class="unbold">Oh, and if you'd like the Sketch files I can send them, but please keep in mind I had speed in mind when designing this exercise. My use of symbols, text styles and layer styles are lacking, because the focus of my time was on quick exploration.)</span></p>	
-		
-	  <h3 style="margin: -20px 0 120px 0">Brian Hulme</h3>
+		<p>Thank you for your time and for the consideration. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>. <span class="unbold">Oh, and if you'd like the Sketch files I can send them, but please keep in mind I had speed in mind when designing this exercise. My use of symbols, text styles and layer styles are lacking, because the focus of my time was on quick exploration.)</span></p>
+			
+		<h3 style="margin: -20px 0 120px 0">Brian Hulme</h3>
   </body>
 </html>
