--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -17,7 +17,7 @@
     <h2><span class="num-count">02 /</span> To the Machine</h2>
 		<p>After sketching a number of ideas (both good and bad), I review my work and choose the strongest options to continue to build out. That's when I transition to the computer and begin layout design. This is where I start solving spacing, colors, typography and navigation. I use placeholders for icons and images until I'm happy with the basic layout I have, and I normally have a good mental picture of color schemes and visual feel before I move to the computer. This is where a log of exploration and refinement as I build it out.</p>
     <img src="assets/autom8-01-sketch.jpg" style="margin-bottom: 10px;"/>
-		<video src="assets/video-workflow-1.mp4" autoplay muted controls loop>
+    <video src="assets/video-workflow-1.mp4" muted controls loop>
       <source src="assets/video-workflow-1.mp4" type="video/mp4">
     </video>
     <p>I like to use Sketch symbols during this process because it helps me make a lot of explorational changes quickly, but I don't spent a ton of time making sure things are aligned perfectly or named correctly&mdash;I won't use 80% of what I create in this phase anyways. Once I'm happy with what I have, I move on to the next concept. I'll come back to this design later and refine further, but I don't want to get too attached to any one design at this stage.</p>
@@ -26,14 +26,14 @@
     <p>After I've explored one design direction, I go back to my sketches and choose another option I'd like to explore. From there I repeat the same process. Depending on the project this could take a few hours or a few weeks. I try to stretch the creative bounds of the project, thinking of as many different ways to solve the problem as I can.</p>
     <img src="assets/autom8-02-sketch.jpg" style="margin-bottom: 10px;"/>
 		<img src="assets/autom8-02-sketch-2.jpg" style="margin-bottom: 10px;"/>
-		<video src="assets/video-workflow-3.mp4" autoplay muted controls loop>
+		<video src="assets/video-workflow-3.mp4" muted controls loop>
       <source src="assets/video-workflow-3.mp4" type="video/mp4">
     </video>
 		<p>In the example above I wanted the "scenes" (Everything's On, Everything Off, etc) to feel more special&mdash;I wanted the visual heirarchy to feel less like a list and more important. I explored a full-screen view for each "scene", with the ability to swipe between each scene. A simple line illustration for each scene adds to the visual interest and helps users have a visual reference as to where they are.</p>
 
 		<h2><span class="num-count">04 /</span> Refining &amp; Perfecting</h2>
 		<p>Once I've finished the exploration phase, I return to the concepts I feel are strongest and start to refine them. I sketch out the iconography I want, find images, and start fine-tuning typography. This is also where I start animating things&mdash;tap states, transition states, iconography, or anything else that might need animating.</p>
-		<video src="assets/video-workflow-2.mp4" autoplay muted controls loop>
+		<video src="assets/video-workflow-2.mp4"  muted controls loop>
       <source src="assets/video-workflow-2.mp4" type="video/mp4">
     </video>
 	
