--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -7,8 +7,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Karla|Lora&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Finger Food Design Challenge</h1>
-			
     <h2><span class="num-count">01 /</span> Sketch Sketch Sketch</h2>
     <p>I always start any design project with my sketchbook. It gets ideas&mdash;both good and bad&mdash;out quickly, keeping me from  solving the visual part of the problem before I'm ready. Sketches help me explore visual heirarchy and flow, and they're a critical step in my problem solving. I work through a lot of potential pitfalls as I draw, and I start developing a visual picture of how I want the product to start to feel.</p>
     <img src="assets/sketches-02.jpg" style="margin-bottom: 10px;"/>
@@ -59,8 +57,7 @@
 		
 		<p>&mdash;</p>
 		
-		<p>Thank you for your time and for the consideration. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>. <span class="unbold">Oh, and if you'd like the Sketch files I can send them, but please keep in mind I had speed in mind when designing this exercise. My use of symbols, text styles and layer styles are lacking, because the focus of my time was on quick exploration.)</span></p>
-			
+		<p>Thank you for your time. You can find my portfolio, contact info and r&eacute;sum&eacute; at <a href="http://www.thelissilent.com" class="bold">www.theLisSilent.com</a>.</p>
 		<h3 style="margin: -20px 0 120px 0">Brian Hulme</h3>
   </body>
 </html>
