--- a/fingerfood/index.html
+++ b/fingerfood/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Design Challenge | Finger Food</title>
+    <title>Design Challenge | Design Exercise</title>
     <link rel="stylesheet" style="text/css" href="style/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Karla|Lora&display=swap" rel="stylesheet">
   </head>
   <body>
+    <h1>A Design Exercise</h1>
     <h2><span class="num-count">01 /</span> Sketch Sketch Sketch</h2>
     <p>I always start any design project with my sketchbook. It gets ideas&mdash;both good and bad&mdash;out quickly, keeping me from  solving the visual part of the problem before I'm ready. Sketches help me explore visual heirarchy and flow, and they're a critical step in my problem solving. I work through a lot of potential pitfalls as I draw, and I start developing a visual picture of how I want the product to start to feel.</p>
     <img src="assets/sketches-02.jpg" style="margin-bottom: 10px;"/>
