--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
     <nav>
       <ul>
         <a href="pages/about.html"><li>about</li></a>
-        <a href="assets/global/resume_brian_hulme_2019.pdf" target="_blank"><li>resume</li></a>
+        <a href="assets/global/resume_brian_hulme_2021.pdf" target="_blank"><li>resume</li></a>
       </ul>
     </nav>
     
+    <div id="pdfPortfolio">
+      <h1>Hey. It's been a while since I've updated my work here. I do, however, have my latest and greatest work available as a PDF.</h1>
+      <h1><a href="assets/global/Brian%20Hulme%20Design%20Portfolio%202021.pdf" >Get it here</a>, then come back and look at my older work below.</h1>
+    </div>
     <div class="imageGrid">
       <ul class="images">
         <li><a href="pages/chipotle.html"><img src="assets/chipotle/chipotle_01.jpg"></a></li>
