--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <div id="pdfPortfolio">
       <h1>Hey. It's been a while since I've updated my work here. I do, however, have my latest and greatest work available as a PDF.</h1>
-      <h1><a href="assets/global/Brian%20Hulme%20Design%20Portfolio%202021.pdf" >Get it here</a>, then come back and look at my older work below.</h1>
+      <h1><a href="assets/global/Brian%20Hulme%20Design%20Portfolio%202021.pdf" target="_blank">Get it here</a>, then come back and look at my older work below.</h1>
     </div>
     <div class="imageGrid">
       <ul class="images">
