--- a/pages/shef.html
+++ b/pages/shef.html
@@ -25,7 +25,7 @@
 			
 			<div class="imageGrid">
         <ul class="images">
-          <li><img src="../assets/shef/shef_07.jpg"></li>
+          <li><img src="../assets/shef/shef-07.gif"></li>
 					<li><img src="../assets/shef/shef_06.jpg"></li>
 					<li><img src="../assets/shef/shef_12.jpg"></li>
 				</ul>
