--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     
     <div id="introText">
-			<h1>I’m a lead product designer focused on companies that like to move fast and aim high.</h1>
+			<h1>I’m a design director focused on companies that like to move fast and aim high.</h1>
 			<h1>Here’s some of my work.</h1>
     </div>
     <div class="imageGrid">
